--- a/testeo/src/app/login/login.page.html
+++ b/testeo/src/app/login/login.page.html
@@ -8,7 +8,7 @@
   <ion-row class="ion-justify-content-center">
     <ion-col size='9'> 
       <ion-item>
-        <ion-label position="floating">correo</ion-label>
+        <ion-label position="floating">correo o usuario</ion-label>
         <ion-input [(ngModel)]='correo' class="lavel"></ion-input>
       </ion-item>
     </ion-col>  
@@ -22,10 +22,10 @@
     </ion-col>  
   </ion-row>
   <ion-row class="centro" >
-    <ion-col ><ion-router-redirect from="/login" to="/inicio" href='#'>¿Olvidaste tu contraseña?</ion-router-redirect></ion-col>
+    <ion-col ><a routerLink='/recover'>¿Olvidaste tu contraseña?</a></ion-col>
   </ion-row>
   <ion-row>
-    <ion-button class="boton rojo" >enviar</ion-button>
+    <ion-button class="boton rojo" (click)='validar()'>enviar</ion-button>
   </ion-row> 
 </ion-content>
 <ion-footer>
